--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,8 @@
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "pug"
+      "pug",
+      "pug/import"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -19,9 +20,80 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "sass/style.sass",
+      "imports": [
+        "sass/import/var.sass"
+      ]
+    },
+    {
+      "path": "pug/import/bunnyCreation.pug",
+      "imports": [
+        "pug/import/main.pug"
+      ]
+    },
+    {
+      "path": "pug/import/bunnyRace.pug",
+      "imports": [
+        "pug/import/main.pug"
+      ]
+    },
+    {
+      "path": "pug/import/bunnySelection.pug",
+      "imports": [
+        "pug/import/main.pug"
+      ]
+    },
+    {
+      "path": "pug/import/bunnyLeaderboard.pug",
+      "imports": [
+        "pug/import/main.pug"
+      ]
+    },
+    {
+      "path": "pug/bunnyLeaderboard.pug",
+      "imports": [
+        "pug/main.pug",
+        "pug/import/Creation.pug",
+        "pug/import/Leaderboard.pug",
+        "pug/import/Race.pug",
+        "pug/import/Selection.pug"
+      ]
+    },
+    {
+      "path": "pug/bunnyCreation.pug",
+      "imports": [
+        "pug/main.pug",
+        "pug/import/Creation.pug",
+        "pug/import/Leaderboard.pug",
+        "pug/import/Race.pug",
+        "pug/import/Selection.pug"
+      ]
+    },
+    {
+      "path": "pug/bunnyRace.pug",
+      "imports": [
+        "pug/main.pug",
+        "pug/import/Creation.pug",
+        "pug/import/Leaderboard.pug",
+        "pug/import/Race.pug",
+        "pug/import/Selection.pug"
+      ]
+    },
+    {
+      "path": "pug/bunnySelection.pug",
+      "imports": [
+        "pug/main.pug",
+        "pug/import/Creation.pug",
+        "pug/import/Leaderboard.pug",
+        "pug/import/Race.pug",
+        "pug/import/Selection.pug"
+      ]
+    }
+  ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -135,7 +207,7 @@
   "autoprefixer": {
     "browsers": "last 5 versions"
   },
-  "file-type-pug": "{\"compilers\":[\"pug\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"replaceSegmentsWith\":\"../\",\"relative\":\"../\"},\"outputSuffix\":null}",
+  "file-type-pug": "{\"compilers\":[\"pug\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"replaceSegmentsWith\":\"../\",\"relative\":\"../../\"},\"outputSuffix\":null}",
   "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"]}",
   "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"]}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
